--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script>
     window.addEventListener("load", function () {
       liff.init({
-        liffId: "2008573878-b5rNR1aj"   // ← ← 正しい LIFF ID を厳密にここへ
+        liffId: "2008573878-b5rNR1aj"
       })
       .then(() => {
         console.log("LIFF init OK");
@@ -31,6 +31,8 @@
     });
   </script>
 
-  <script src="script.js"></script>
+  <!-- ★★★ ここだけ書き換えればOK ★★★ -->
+  <script src="script.js?v=2"></script>
+
 </body>
 </html>
