--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     });
   </script>
 
-  <!-- ★★★ ここだけ書き換えればOK ★★★ -->
-  <script src="script.js?v=2"></script>
-
+  <!-- キャッシュ対策で ?v=3 をつける -->
+  <script src="script.js?v=3"></script>
 </body>
 </html>
