--- a/test.html
+++ b/test.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>抽選デザイン確認用</title>
+  <meta charset="UTF-8" />
+  <title>名代宇奈とと25周年！LINEガチャ（テスト版）</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
@@ -35,8 +35,7 @@
       background: var(--card-bg);
       border-radius: 18px;
       padding: 22px 20px 26px;
-      box-shadow: 0 14px 30px rgba(0,0,0,0.18);
-      position: relative;
+      box-shadow: 0 14px 30px rgba(0, 0, 0, 0.18);
       overflow: hidden;
     }
 
@@ -53,7 +52,6 @@
       color: var(--text-sub);
       margin-bottom: 16px;
       line-height: 1.6;
-      white-space: pre-line;
     }
 
     .prize-box {
@@ -62,21 +60,21 @@
       border-radius: 12px;
       padding: 16px;
       margin-bottom: 20px;
-      text-align: center; /* ➤ 中央揃え */
+      text-align: left;
     }
 
     .prize-title {
-      font-size: 15px; /* ➤ 少し大きく */
+      font-size: 15px;
       font-weight: 700;
-      color: #b45309;
       margin-bottom: 10px;
+      color: #b45309;
     }
 
     .prize-items {
-      list-style: none;
       padding: 0;
       margin: 0;
-      font-size: 14px; /* ➤ 大きく */
+      list-style: none;
+      font-size: 14px;
       line-height: 1.7;
       color: #7c2d12;
     }
@@ -84,48 +82,33 @@
     #drawBtn {
       width: 100%;
       max-width: 260px;
-      display: block;
       margin: 0 auto;
-      background: var(--brand);
-      color: #ffffff;
+      display: block;
+      padding: 14px 18px;
       font-size: 16px;
       font-weight: 700;
-      padding: 14px 18px;
-      border-radius: 999px;
+      background: var(--brand);
+      color: #fff;
       border: none;
-      letter-spacing: 0.12em;
+      border-radius: 999px;
       cursor: pointer;
+      letter-spacing: 0.1em;
       transition: opacity 0.1s, transform 0.1s;
-      box-shadow: none; /* シャドウなし */
+      box-shadow: none;
     }
 
     #drawBtn:active {
-      transform: translateY(1px) scale(0.98);
+      transform: scale(0.98);
       opacity: 0.9;
-    }
-
-    .button-caption {
-      text-align: center;
-      font-size: 11px;
-      margin-top: 6px;
-      color: var(--text-sub);
     }
 
     #result {
       text-align: center;
-      margin-top: 14px;
-      font-size: 19px;
-      color: var(--brand);
+      margin-top: 18px;
+      font-size: 20px;
       font-weight: 800;
+      color: var(--brand);
       min-height: 1.5em;
-    }
-
-    .note {
-      margin-top: 12px;
-      font-size: 11px;
-      color: #6b7280;
-      line-height: 1.5;
-      text-align: center;
     }
   </style>
 </head>
@@ -133,37 +116,11 @@
 <body>
   <div class="wrapper">
     <div class="card">
-
       <h1>名代宇奈とと25周年！LINEガチャ</h1>
 
-      <!-- 説明文（改行あり） -->
       <p class="subtitle">
-「抽選する」のボタンを押すと、<br>
-その場で当選結果がわかります。
+        「抽選する」のボタンを押すと、その場で当選結果がわかります。
       </p>
 
-      <!-- 当選ラインナップ -->
       <div class="prize-box">
-        <div class="prize-title">🎁 当選ラインナップ</div>
-        <ul class="prize-items">
-          <li>1等：うな丼ダブル無料</li>
-          <li>2等：うな丼無料</li>
-          <li>3等：Tシャツ or 湯呑み</li>
-          <li>4等：コースター or 巾着</li>
-          <li>5等：キーホルダー</li>
-        </ul>
-      </div>
-
-      <button id="drawBtn">抽選する</button>
-      <p class="button-caption">※このページは動作しません（デザイン確認用）</p>
-
-      <p id="result"></p>
-
-      <p class="note">
-        本番環境では、抽選結果がLINEトークに自動送信されます。
-      </p>
-
-    </div>
-  </div>
-</body>
-</html>
+        <
