--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@
       })
       .catch(err => {
         console.error("LIFF init error", err);
-        alert("ページの読み込みに失敗しました。時間をおいて再度お試しください。");
+        alert("このページはLINEアプリ内ブラウザ専用です。\n\n" +
+    "SafariやChromeなどの外部ブラウザではご利用いただけません。\n\n" +
+    "恐れ入りますが、名代 宇奈ととのLINE公式アカウントのリッチメニューから、もう一度リンクを開いてください。");
       });
     });
   </script>
